# dask-chtc

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  build.sh  clustering.ipynb  dask_chtc.py  demo.ipynb  demo.py  entrypoint.sh  grid_search.ipynb  hyperparam-opt.ipynb  mypy.ini  pyproject.toml  setup.cfg  test-bare-distributed.py  test-bare-jobqueue.py  test-docker-jobqueue.py
.github/workflows/: pre-commit.yml  tests.yml
dask_chtc/: __init__.py  cli.py  cluster.py  config.py  entrypoint.sh  jobqueue-chtc.yaml  security.py  version.py
demo/: demo.ipynb  demo.py
docker/worker/: Dockerfile  entrypoint.sh  logging.yaml
docs/source/: api.rst  cli.rst  conf.py  configuration.rst  docker.rst  example.ipynb  index.rst  installation.rst  jupyter.rst  networking.rst  ports.rst  troubleshooting.rst
tests/: ci.sh  conftest.py  test_cluster_args.py  test_entrypoint.py  test_version.py  test_yaml.py
