[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py36", "py37", "py38"]
include = "\\.pyi?$"

[tool.isort]
known_third_party = ["dask_jobqueue", "setuptools"]

[tool.pytest.ini_options]
testspaths = ["test"]
console_output_style = "count"
