[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py36", "py37", "py38"]
include = "\\.pyi?$"

[tool.isort]
known_third_party = ["click", "click_didyoumean", "dask", "dask_jobqueue", "numpy", "pandas", "pytest", "setuptools", "sklearn", "yaml"]
line_length = 100
multi_line_output = "VERTICAL_HANGING_INDENT"

[tool.pytest.ini_options]
testspaths = ["test"]
console_output_style = "count"
