[metadata]
name = dask_chtc
version = 0.1.0
long_description = file: README.md
long_description_content_type = text/markdown
author = Josh Karpel
author_email = josh.karpel@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: System :: Distributed Computing

[options]
packages =
    dask_chtc
install_requires =
    click>=7.0
    click-didyoumean
    cryptography
    dask
    dask-jobqueue@git+https://github.com/dask/dask-jobqueue.git@0049ba7df81e3b687f0243f82b106df7a1e2ed32
    htcondor>=8.9.8a2
    humanize
    psutil
    pyyaml
    watchdog
    importlib-metadata>=1.0;python_version < "3.8"
python_requires = >=3.6
include_package_data = True

[options.entry_points]
console_scripts =
    dask-chtc = dask_chtc.cli:cli

[options.extras_require]
docs =
    sphinx
    sphinx_rtd_theme
    sphinx_autodoc_typehints
    sphinx-issues
    sphinx-autobuild
    sphinx-click
    pygments-github-lexers
    ipython
    nbsphinx
    nbstripout
tests =
    pytest
    pre-commit

[options.package_data]
* =
    *.sh
    *.yaml

[bdist_wheel]
universal = 1
